# risingwave-py

./: .gitignore  Makefile  README.md  demo.py  pyproject.toml  requirements-dev.txt
binance/: __init__.py  core.py
risingwave/: core.py
wavekit/: __init__.py  core.py
