[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
  "/.git",
  "/venv",
]


[tool.hatch.build.targets.wheel]
packages = ["wavekit"]


[project]
name = "wavekit_risingwavelabs"
version = "0.0.1"
authors = [
    { name = "Mike Wang", email="mikecwangcn@gmail.com" }
]
description = "Python SDK for real-time processing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]


[projects.urls]
Homepage = "https://github.com/risingwavelabs/wavekit"
Issues = "https://github.com/risingwavelabs/wavekit/issues"
