[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = ["/.git", "/venv", "/.venv", "/binance"]


[tool.hatch.build.targets.wheel]
packages = ["risingwave"]


[project]
name = "risingwave-py"
version = "0.0.1"
authors = [
    { name = "Mike Wang", email = "mikecwangcn@gmail.com" },
    { name = "Patrick Huang", email = "hzxa21@hotmail.com" },
]
description = "Python SDK for real-time processing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==2.2.2",
    "sqlalchemy-risingwave==1.1.0",
    "semver==3.0.2",
    "psycopg2-binary==2.9.9",
]
keywords = [
    "risingwave",
    "risingwave_py",
    "risingwave-py",
    "risingwave-python",
    "risingwave_python",
]


[projects.urls]
Homepage = "https://github.com/risingwavelabs/risingwave-py"
Issues = "https://github.com/risingwavelabs/risingwave-py/issues"
